--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,11 @@
       "matches": ["<all_urls>"],
       "js": ["content.js"],
       "run_at": "document_start"
+    },
+    {
+      "matches": ["<all_urls>"],
+      "js": ["cache-buster.js"],
+      "run_at": "document_end"
     }
   ]
 }
