Debug Helpers Panel

--- a/manifest.json
+++ b/manifest.json
@@ -22,6 +22,11 @@
       "matches": ["<all_urls>"],
       "js": ["cache-buster.js"],
       "run_at": "document_end"
+    },
+    {
+      "matches": ["<all_urls>"],
+      "js": ["debug-helpers.js"],
+      "run_at": "document_end"
     }
   ]
 }
